fixed overlay colors and spacings in some sections

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,11 @@ h2{
   padding-bottom:150px;
 }
 
+.section_spacing_last {
+  padding-top:150px;
+  padding-bottom:0px;
+}
+
 .element_spacing{
   margin-top:75px;
 }
